fixed sticky header and scrollbars

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -53,5 +53,5 @@ html {
 body {
   font-family: inherit;
   height: 100%;
-  overflow-x: hidden;
+
 }
